<resources>
    <string-array name="version_name">
        <item>Ao</item>
        <item>Bane</item>
        <item>Chauntea</item>
        <item>Demogorgon</item> // remove?
        <item>Eldath</item>
        <item>Fzoul</item>
        <item>Gruumish</item>
        <item>Helm</item>
        <item>Ilmater</item>
        <item>Jergal</item>
        <item>Kelemvor</item>
        <item>Lolth</item>
        <item>Myrkul</item>
        <item>Nebelun</item>
        <item>Oghma</item>
        <item>Panzuriel</item>
        <item>Qotal</item>
        <item>Rhyxali</item>
        <item>Sune</item>
        <item>Tymora</item>
        <item>Umberlee</item>
        <item>Vhara</item>
        <item>Waukeen</item>
        <item>Xerfilstyx</item>
        <item>Yondalla</item>
        <item>Zuggtmoy</item>
    </string-array>
    <string name="version_name_A">Azuth</string>
    <string name="version_name_B">Bane</string>
    <string name="version_name_C">Chauntea</string>
    <string name="version_name_D">Demogorgon</string>
    <string name="version_name_E">Eldath</string>
    <string name="version_name_F">Fzoul</string>
    <string name="version_name_G">Gruumish</string>
    <string name="version_name_H">Helm</string>
    <string name="version_name_I">Ilmater</string>
    <string name="version_name_J">Jergal</string>
    <string name="version_name_K">Kelemvor</string>
    <string name="version_name_L">Lolth</string>
    <string name="version_name_M">Myrkul</string>
    <string name="version_name_N">Nebelun</string>
    <string name="version_name_O">Oghma</string>
    <string name="version_name_P">Panzuriel</string>
    <string name="version_name_Q">Qotal</string>
    <string name="version_name_R">Rhyxali</string>
    <string name="version_name_S">Sune</string>
    <string name="version_name_T">Tymora</string>
    <string name="version_name_U">Umberlee</string>
    <string name="version_name_V">Vhara</string>
    <string name="version_name_W">Waukeen</string>
    <string name="version_name_X">Xerfilstyx</string>
    <string name="version_name_Y">Yondalla</string>
    <string name="version_name_Z">Zuggtmoy</string>
    <string-array name="phonetic">
        <item>alpha</item>
        <item>brave</item>
        <item>charlie</item>
        <item>delta</item>
        <item>echo</item>
        <item>foxtrot</item>
        <item>golf</item>
        <item>hotel</item>
        <item>india</item>
        <item>juliet</item>
        <item>kilo</item>
        <item>lima</item>
        <item>mike</item>
        <item>november</item>
        <item>oscar</item>
        <item>papa</item>
        <item>quebec</item>
        <item>romeo</item>
        <item>sierra</item>
        <item>tango</item>
        <item>uniform</item>
        <item>victor</item>
        <item>whiskey</item>
        <item>x-ray</item>
        <item>yankee</item>
        <item>zulu</item>
    </string-array>
    <string name="dao_master_fail">Failed to open dao master on database %s!</string>
    <string name="dao_session_fail">Failed to open dao session for table %s!</string>
    <string name="view_visible_unknown" translatable="false">/?/?/?</string>
    <string name="view_invisible_unknown" translatable="false"></string>
    <string name="not_supported">Feature not yet supported.</string>
    <string name="dialog_confirm">Ok</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="text_key_value" translatable="false"><b>%s:</b> %s</string>
    <string name="regex_signed_integer" translatable="false">(+|-)?[0123456789]+</string>
    <string name="test_string">TEST</string>
    <string name="test_to_be_implemented">To be implemented.</string>
    <string name="cell_the_image">Image</string>
    <string name="spl_adapter_spell_level">%s level</string>
    <string name="spl_adapter_cantrip">Cantrip</string>
    <string name="app_name">D&amp;D Utilities</string>
    <string name="app_company">SoupThatIsThick Studios</string>
    <string name="field_key">KEY</string>
    <string name="field_value">VALUE</string>
    <string name="title_activity_measure_encounter">Measure Encounter</string>
    <string name="title_activity_roll_for_loot">Roll for Loot</string>
    <string name="title_activity_edit_settings">Edit Settings</string>
    <string name="title_activity_edit_feats_list">Edit Feats</string>
    <string name="title_activity_edit_feat">Edit Feat</string>
    <string name="title_activity_edit_contacts_list">Edit Contacts</string>
    <string name="title_activity_edit_contact">Edit Contact</string>
    <string name="title_activity_custom_lists">Custom Lists</string>
    <string name="title_activity_edit_notes_list">Personal Notes Activity</string>
    <string name="title_activity_edit_note">Edit Note Activity</string>
    <string name="title_activity_edit_spell">Edit Spell Activity</string>
    <string name="title_activity_edit_spell_book">Edit Spellbook Activity</string>
    <string name="title_activity_compendium">Compendium Activity</string>
    <string name="title_activity_manage_player_characters">Manage Player Characters</string>
    <string name="title_activity_edit_logsheet">Edit Log Sheet</string>
    <string name="title_activity_edit_session">Edit Session</string>
    <string name="title_activity_edit_magic_item">Edit Magic Item</string>
    <string name="title_activity_main">Main Activity</string>
    <string name="title_activity_add_player">Add Player Activity</string>
    <string name="title_activity_add_monster">Add Monster Activity</string>
    <string name="title_activity_add_challenge">Add Challenge Activity</string>
    <string name="title_activity_view_summary">View Summary Activity</string>
    <string name="title_activity_view_players">View Players Activity</string>
    <string name="title_activity_view_challenges">View Challenges Activity</string>
    <string name="title_activity_splash_screen">Splash Screen Activity</string>
    <string name="title_activity_view_spells">Spell Book Activity</string>
    <string name="title_activity_view_magic_items">Magic Item Activity</string>
    <string name="title_activity_view_splash_screen">View Splash Screen</string>
    <string name="title_activity_view_monsters">View Monster Manual Activity</string>
    <string name="title_activity_edit_monsters">Edit Monsters Activity</string>
    <string name="title_activity_edit_monster">Edit Monster</string>
    <string name="title_activity_print_logsheet">Print Log Sheet</string>
    <string name="title_activity_edit_content_values">Edit Content Values</string>
    <string name="title_activity_camera">Camera Activity</string>
    <string name="title_activity_search_filters">Select Search Filters</string>
    <string name="title_activity_test">TEST ACTIVITY</string>
    <string name="title_activity_storage">Storage Activity</string>
    <string name="title_activity_edit_entity_list">Edit Entity List</string>
    <string name="title_activity_edit_entity">Edit Entity</string>
    <string name="title_service_compendium">Compendium Service</string>
    <string name="description_service_compendium">This service is used to retrieve all the records from the various databases held locally on the phone.</string>
    <string name="add_player_text">Add Player</string>
    <string name="remove_player_text">Remove Player</string>
    <string name="add_monster_text">Add Monster</string>
    <string name="remove_monster_text">Remove Monster</string>
    <string name="add_challenge_text">Add Challenge</string>
    <string name="remove_challenge_text">Remove Player</string>
    <string name="splash_screen_dummy_button">SPLASH SCREEN DUMMY BUTTON</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="label_threat_title">Threat Level</string>
    <string name="label_xp_title">Threat Level</string>
    <string name="editdata_button_test">TEST</string>
    <string name="editdata_manage_storage">Manage Storage</string>
    <string name="editdata_button_edit_feats">Feats</string>
    <string name="editdata_button_edit_contacts">Contacts</string>
    <string name="editdata_button_edit_custom_lists">Custom Lists</string>
    <string name="editdata_button_edit_custom_monsters">Custom Monsters</string>
    <string name="editdata_button_edit_personal_notes">Personal Notes</string>
    <string name="editdata_button_edit_spells">Spell Book</string>
    <string name="editdata_button_edit_map">Map Editor</string>
    <string name="main_button_measure_encounter">Measure Encounter</string>
    <string name="main_button_edit_databases">Edit Databases</string>
    <string name="main_button_view_compendium">D&amp;D Compendium</string>
    <string name="main_button_view_monsters">Monster Manual</string>
    <string name="main_button_view_magic_items">Magic Items Vault</string>
    <string name="main_button_edit_logsheets">Log Sheets</string>
    <string name="main_button_roll_for_loot">Roll for Loot</string>
    <string name="main_button_view_logs">View Logs</string>
    <string name="main_button_settings">Settings</string>
    <string name="test_button_edit_session">Edit Session</string>
    <string name="test_button_edit_logsheet">Edit Log Sheet</string>
    <string name="test_button">Test Button</string>
    <string name="button_select">Select</string>
    <string name="button_deselect">Deselect</string>
    <string name="button_capture">Capture</string>
    <string name="sv_search_hint_normal">Enter search text...</string>
    <string name="sv_search_hint_descriptive">All words must match something...</string>
    <string name="sv_search_hint_regex">Enter a java regular expression...</string>
    <string name="mv_str">STR</string>
    <string name="mv_dex">DEX</string>
    <string name="mv_con">CON</string>
    <string name="mv_int">INT</string>
    <string name="mv_wis">WIS</string>
    <string name="mv_cha">CHA</string>
    <string name="mv_armor_class">Armor Class</string>
    <string name="mv_hit_points">Hit Points</string>
    <string name="mv_speed">Speed</string>
    <string name="mv_damage_resistances">Damage Resistances</string>
    <string name="mv_damage_immunities">Damage Immunities</string>
    <string name="mv_condition_immunities">Condition Immunities</string>
    <string name="mv_senses">Senses</string>
    <string name="mv_languages">Languages</string>
    <string name="mv_challenge">Challenge</string>
    <string name="mv_actions">Actions</string>
    <string name="mv_reactons">Reactions</string>
    <string name="mv_legendary_actions">Legendary Actions</string>
    <string name="mv_hd_value">(%1$s)</string>
    <string name="mv_saving_throws">Saving Throws</string>
    <string name="mv_skills">Skills</string>
    <string name="mv_ime_search">Search</string>
    <string name="ml_add_button">Add</string>
    <string name="ml_delete_button">Delete</string>
    <string name="ml_clear_button">Clear</string>
    <string name="emi_name">Name</string>
    <string name="emi_type">Type</string>
    <string name="emi_attunement">Attunement</string>
    <string name="emi_location">Location</string>
    <string name="emi_description">Description</string>
    <string name="esp_name">Name</string>
    <string name="esp_level">Level</string>
    <string name="esp_type">School</string>
    <string name="esp_casting_time">Casting Time</string>
    <string name="esp_range">Range</string>
    <string name="esp_components">Components</string>
    <string name="esp_duration">Duration</string>
    <string name="esp_description">Description</string>
    <string name="esp_materials">Materials</string>
    <string name="esp_classes">Class Lists</string>
    <string name="st_export_title">Export Database</string>
    <string name="st_save_backup_title">Save Backup</string>
    <string name="st_load_backup_title">Load Backup</string>
    <string name="st_import_external_title">Import Database</string>
    <string name="st_reset_title">Reset Database"</string>
</resources>