<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/messageView"
            android:layout_weight="1"
            style="@style/AppTheme.Scroll"
            android:textAllCaps="true"
            android:textSize="@dimen/text_big"
            android:visibility="gone"
            />

        <Button
            android:text="@string/st_reset_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/resetButton"
            android:layout_weight="1"
            android:onClick="onResetButtonClicked"
            style="@style/AppTheme.Scroll"
            android:textAllCaps="true"
            android:textSize="@dimen/text_big"
            android:visibility="visible"
            />

        <Button
            android:text="@string/st_save_backup_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/saveBackupButton"
            android:layout_weight="1"
            android:onClick="onSaveBackupButtonClicked"
            style="@style/AppTheme.Scroll"
            android:textAllCaps="true"
            android:textSize="@dimen/text_big"
            android:visibility="visible"
            />

        <Button
            android:text="@string/st_load_backup_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/restoreBackupButton"
            android:layout_weight="1"
            android:onClick="onLoadBackupClicked"
            style="@style/AppTheme.Scroll"
            android:textAllCaps="true"
            android:textSize="@dimen/text_big"
            android:visibility="visible"
            />

        <Button
            android:text="@string/st_import_external_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/importButton"
            android:layout_weight="1"
            android:onClick="onImportButtonClicked"
            style="@style/AppTheme.Scroll"
            android:textAllCaps="true"
            android:textSize="@dimen/text_big"
            android:visibility="visible"
            />

        <Button
            android:text="@string/st_export_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/exportButton"
            android:layout_weight="1"
            android:onClick="onExportButtonClicked"
            style="@style/AppTheme.Scroll"
            android:textAllCaps="true"
            android:textSize="@dimen/text_big"
            android:visibility="visible"
            />

    </LinearLayout>
</ScrollView>